# cadre

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: adapters.md  architecture.md  calibration.md  components.md  configuration.md  development.md  examples.md  graphs.md  index.md  installation.md  quickstart.md
examples/: basic.py  training.py
src/cadre/: __init__.py  adapters.py  artifacts.py  calibration.py  config.py  engine.py  errors.py  features.py  graphs.py  interfaces.py  lineage.py  models.py  policy.py  risk.py  serialization.py  training.py
tests/: test_calibration.py  test_engine.py  test_graphs.py  test_missing_components.py
