[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cadre-llm-security"
version = "0.1.0"
description = "Calibration-aware risk estimation and adaptive routing for secure LLM and RAG systems."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Maruf Ahmad"},
  {name = "Dip Chakraborty"}
]
keywords = ["llm", "rag", "security", "prompt-injection", "calibration", "routing", "guardrails"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "pydantic>=2.7",
  "networkx>=3.2",
  "typing-extensions>=4.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5",
]
openai = ["openai>=1.40"]
sentence-transformers = ["sentence-transformers>=3.0"]

[project.urls]
Homepage = "https://github.com/your-org/cadre-llm-security"
Repository = "https://github.com/your-org/cadre-llm-security"
Issues = "https://github.com/your-org/cadre-llm-security/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cadre"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"
